# Vita3K

./: CMakeLists.txt
vita3k/: CMakeLists.txt  interface.cpp  main.cpp
vita3k/app/: CMakeLists.txt
vita3k/app/include/app/: functions.h
vita3k/app/src/: app_init.cpp  app_init_qt.cpp
vita3k/emuenv/: CMakeLists.txt
vita3k/gui-qt/: CMakeLists.txt
vita3k/gui-qt/include/gui-qt/: functions.h  initial_setup.h  initial_setup.ui  state.h
vita3k/gui-qt/src/: gui.cpp  gui_qt.cpp  initial_setup_wizard.cpp  initial_setup_wizard.h  initial_setup_wizard.ui  install_firmware_page.cpp  install_firmware_page.h  install_firmware_page.ui  live_area.cpp  live_area.h  live_area.ui  main_window.cpp  main_window.h  main_window.ui  render_window.cpp  render_window.h  select_language_page.cpp  select_language_page.h  select_language_page.ui  select_pref_path_page.cpp  select_pref_path_page.h  select_pref_path_page.ui  user_management.cpp  user_management_dialog.cpp  user_management_dialog.h  user_management_dialog.ui
vita3k/gui-qt/src/common-dialogs/: common_dialog.cpp  common_dialog.h  ime_dialog.ui  message_dialog.ui
vita3k/gui-qt/src/configuration/: base_settings_widget.cpp  base_settings_widget.h  core_settings_widget.cpp  core_settings_widget.h  core_settings_widget.ui  cpu_settings_widget.cpp  cpu_settings_widget.h  cpu_settings_widget.ui  debug_settings_widget.cpp  debug_settings_widget.h  debug_settings_widget.ui  emulator_settings_widget.cpp  emulator_settings_widget.h  emulator_settings_widget.ui  gpu_settings_widget.cpp  gpu_settings_widget.h  gpu_settings_widget.ui  network_settings_widget.cpp  network_settings_widget.h  network_settings_widget.ui  settings_window.cpp  settings_window.h  settings_window.ui  system_settings_widget.cpp  system_settings_widget.h  system_settings_widget.ui
vita3k/gui-qt/src/initial-setup/: initial_setup_wizard.cpp  initial_setup_wizard.h  initial_setup_wizard.ui  select_language_page.ui  select_pref_path_page.ui
vita3k/gui-qt/src/models/: app_list_model.cpp  app_list_model.h
vita3k/gui-qt/src/qdarkstyle/dark/: darkstyle.qrc
vita3k/gui-qt/src/qdarkstyle/light/: lightstyle.qrc
vita3k/gui/include/gui/: functions.h
vita3k/gui/src/: firmware_install_dialog.cpp  settings_dialog.cpp
